--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -14,7 +14,7 @@ query.port=25565
 pvp=true
 generate-structures=true
 max-chained-neighbor-updates=1000000
-difficulty=easy
+difficulty=hard 
 network-compression-threshold=256
 max-tick-time=60000
 require-resource-pack=false
@@ -22,7 +22,7 @@ use-native-transport=true
 max-players=20
 online-mode=false
 enable-status=true
-allow-flight=false
+allow-flight=true
 initial-disabled-packs=
 broadcast-rcon-to-ops=true
 view-distance=10
